--- a/src/components/UploadStyle.css
+++ b/src/components/UploadStyle.css
@@ -8,12 +8,14 @@
     margin: 0;
     width: 100% !important;
 }
-.files input:focus{     outline: 2px dashed #92b0b3;  outline-offset: -10px;
+.files input:focus{     
+    outline: 2px dashed #92b0b3;  outline-offset: -10px;
     -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
     transition: outline-offset .15s ease-in-out, background-color .15s linear; border:1px solid #92b0b3;
  }
 .files{ position:relative}
-.files:after {  pointer-events: none;
+.files:after {  
+    pointer-events: none;
     position: absolute;
     top: 60px;
     left: 0;
@@ -30,12 +32,13 @@
 .color input{ background-color:#f1f1f1;}
 .files:before {
     position: absolute;
-    bottom: 10px;
-    left: 0;  pointer-events: none;
+    bottom: 0;
+    left: 0;  
+    pointer-events: none;
     width: 100%;
     right: 0;
     height: 57px;
-    content: " or drag it here. ";
+    content: " or drag it here ";
     display: block;
     margin: 0 auto;
     color: #2ea591;
