--- a/src/components/UploadStyle.css
+++ b/src/components/UploadStyle.css
@@ -1,6 +1,5 @@
 .files input {
-    outline: 2px dashed #92b0b3;
-    outline-offset: -10px;
+    outline: 2px dashed #0275d8;
     -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
     transition: outline-offset .15s ease-in-out, background-color .15s linear;
     padding: 120px 0px 85px 35%;
@@ -29,7 +28,7 @@
     background-size: 100%;
     background-repeat: no-repeat;
 }
-.color input{ background-color:#f1f1f1;}
+.color input{ background-color:#f1f1ff;}
 .files:before {
     position: absolute;
     bottom: 0;
